@@ -137,6 +137,14 @@ Dist::Zilla::Plugin::GitHub::Create = 0.35
 Dist::Zilla::Plugin::Git::PushInitial = 0
 Dist::Zilla::Plugin::Run::AfterMint = 0
 
+[Prereqs / podweaver plugin bundle (direct)]
+; FIXME: [PodWeaver] needs to inject plugin and section prereqs
+; TODO: we should inject develop prereqs on all the
+; PW plugins/transformers/sections we see [PodWeaver] using
+-phase = runtime
+-relationship = requires
+Pod::Weaver::PluginBundle::Default = 4.000
+
 ; These prereqs are for the local weaver.ini, not the weaver.ini being
 ; used in dists that use this plugin bundle.
 ; TODO: [PodWeaver] should inject develop prereqs on all the
