@@ -4,6 +4,7 @@ Revision history for Dist-Zilla-PluginBundle-Author-ETHER
           - eliminate remaining uses of List::MoreUtils
           - remove universal application of [ShareDir] - distributions using
             sharedirs must add it themselves
+          - add Pod::Weaver::PluginBundle::Author::ETHER
 
 0.093     2015-05-22 03:44:45Z
           - move kwalitee.t to xt/author
